--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.7.16",
     "chai": "^4.2.0",
     "ethers": "^5.4.7",
     "hardhat": "^2.11.0",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
+    "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
+    "typescript": "^4.8.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "web3-utils": "^1.7.5"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "dotenv": "^16.0.2"
   }
 }
